# Brahmastra-Coder

./: .gitignore  README.md  SETUP_GUIDE.md
agents/: graph.py  prompts.py  states.py  tools.py
api/: server.py
backend/: .gitignore  DEPLOYMENT_GUIDE.md  main.py  pyproject.toml
backend/agents/: graph.py  tools.py
backend/api/: requirements.txt  server.py
backend/generated_project/: index.html  styles.css
frontend/: .env.example  .npmrc  .vercelignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/preview/: page.tsx
frontend/src/components/: ActivityLog.tsx  CodeEditor.tsx  CompletionNotification.tsx  FileExplorer.tsx  InlinePreview.tsx  PreviewButton.tsx  PromptInput.tsx  StatusBar.tsx  ViewModeSwitcher.tsx
frontend/src/hooks/: useProjectGeneration.ts
generated_project/: app.js  index.html  styles.css
